Fixed z-index.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -58,7 +58,7 @@ body > footer > main > article > .self-link > a > span {
 	height: 100%;
 	top: 0;
 	left: 0;
-	z-index: -1;
+	z-index: 1;
 	background-image: url('transparent.gif');
 }
 body > main > article > header,
